--- a/insert.html
+++ b/insert.html
@@ -301,7 +301,7 @@
 			<td><label for="URL">*URL:</label></td>
 			<td><input type="url" id="URL" name="URL" /></td>
 <!-- YTAUTOFILL -->
-			<td><input type="submit" id="ytAuto" name="ytAuto" value="Autofill" style="display:none" action="insert_ytfill.php"/></td>
+			<td><input title="Please input URL to Autofill" type="button" id="ytAuto" name="ytAuto" value="Autofill" style="display:none" action="insert_ytfill.php"/></td>
 		</tr>
 		<tr>
 			<td><label for="Title">*Title:</label></td>
