Created autofill_insert.html for autofill insert

--- a/insert.html
+++ b/insert.html
@@ -300,8 +300,6 @@
 		<tr>
 			<td><label for="URL">*URL:</label></td>
 			<td><input type="url" id="URL" name="URL" /></td>
-<!-- YTAUTOFILL -->
-			<td><input title="Please input URL to Autofill" type="button" id="ytAuto" name="ytAuto" value="Autofill" style="display:none" action="insert_ytfill.php"/></td>
 		</tr>
 		<tr>
 			<td><label for="Title">*Title:</label></td>
@@ -420,5 +418,8 @@
 
 	</center>
 	</form>
+	
+	<center><form action="autofill_insert.html"><input title="Please input URL to Autofill" type="submit" id="ytAuto" name="ytAuto" value="Go to Autofill Page" style="display:none"/></form></center>
+	
 	</body>
 </html>
